[package]
name = "button_light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.1"
#dittolive-ditto = "=3.0.5"
dittolive-ditto.path = "/home/kplummer/Code/ditto/rust"
structopt = "0.3"
serde_json = "1.0"
