[package]
name = "ditto-rpi4-blinkenlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.1"
#dittolive-ditto = "=3.0.5"
dittolive-ditto = { path = "/home/ubuntu/ditto/rust/dittolive-ditto" }
structopt = "0.3"
serde_json = "1.0"
