[package]
name = "ditto-rpi4-blinkenlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
rust_gpiozero = "0.2.1"
#dittolive-ditto = "=3.0.5"
dittolive-ditto = { path = "/home/ubuntu/ditto/rust/dittolive-ditto" }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8"
